--- a/NMSCEvaluation/nm.sc.eval/src/main/java/com/nm/sc/eval/resources/TacoContributorsList.html
+++ b/NMSCEvaluation/nm.sc.eval/src/main/java/com/nm/sc/eval/resources/TacoContributorsList.html
@@ -7,23 +7,8 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css">
 <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript"src="TacoContributorMap.js"></script>
 
-<script>
-$(document).ready(function() {
-    $('#example').DataTable({
-        "processing" : true,
-        "ajax" : {
-            "url" : "http://localhost:8085/TacoContributorResponse/result",
-            dataSrc : ''
-        },
-        "columns" : [ {
-            "data" : "full_name"
-        }, {
-            "data" : "username"
-        }]
-    });
-});
-</script>
 </head>
 
 <body style="background-color:#B0E0E6;">
@@ -34,19 +19,19 @@ $(document).ready(function() {
 </div>
 <div style="background-color:#FAFAD2;" class="container">
 <div class="table-responsive"> 
-<table style="background-color:#FAFAD2;" id="example" class="table" cellspacing="1" width="100%">
+<table style="background-color:#FAFAD2;" id="tacotable" class="table" cellspacing="1" width="100%">
      <thead>
 		 <div class="row">
          <tr>
 			 <div class="col-sm-4">
-             <th>Full Name</th>
+             <th>Full Name</th>             
 			 </div>
 			 <div class="col-sm-4">
              <th>User Name</th>
 		     </div>
          </tr>
-	 </div>
-        </thead>
+	    </div>
+     </thead>
  </table>
 </div>
 </div>
